# product-forge

./: .gitignore  CI_SETUP_SUMMARY.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FORGE_CLI_EXPANSION_PLAN.md  FORGE_CLI_FILES.md  FORGE_CLI_IMPLEMENTATION_SUMMARY.md  FORGE_CLI_README.md  FORGE_CLI_SUMMARY.md  LICENSE  LOGGING.md  Makefile  PHASE1_SUMMARY.md  README.md  RELEASE_PROCESS.md  pyproject.toml  verify_phase1.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: forge-refresh.md  review-skills-mapping.md
.claude/skills/: claude-code-hooks.md
.github/workflows/: ci.yml  release.yml
.work/transcripts/: 4_2j5wgt_ds.txt
agents/: data-engineering-expert.md  dpo-expert.md  fastapi-expert.md  fastmcp-expert.md  mcp-security-expert.md  product-architect.md  rag-cag-expert.md  ui-product-expert.md  ux-expert.md
commands/: commit.md  create-prd-feature.md  discovery-session.md  generate-tasks.md  list-prds.md  prd-archive.md  prd-status.md  task-focus.md
docs/: commands-removal-log.md  commands-to-skills-migration-analysis.md  migration-project-summary.md  skill-best-practices.md  skill-migration-test-results.md  skill-naming-conventions.md  skills-improvement-action-plan.md  skills-improvement-results.md  skills-matching-analysis.md  skills-rewrites-ready-to-apply.md  test-improved-skills.md  typescript-skills-implementation-complete.md  typescript-skills-review.md  when-field-analysis.md
plugins/claude-code-dev/: forge-index.md
plugins/content-tools/: README.md
plugins/product-design/: .mcp.json  forge-index.md
plugins/team-orchestration/: IMPLEMENTATION_STATUS.md  README.md  forge-index.md
plugins/typescript-experts/: forge-index.md
processes/: focused-task-management.md  prd-management.md  product-development.md  task-file-management.md  task-generation.md
scripts/: fetch-youtube-transcript.py  generate-forge-index.py  refresh-plugins.sh  validate-all-plugins.sh  validate-marketplace.py
scripts/hooks/: init-learnings.sh  save-feedback.py
scripts/notifications/: README.md  claude-hook-notify.sh  claude-hooks.json  com.claude.webhook.plist  go-tmux.sh  hooks.json  notify-claude.sh  tmux-env.sh
skills/ansible/: SKILL.md
skills/design-system/: SKILL.md
skills/dlthub/: SKILL.md
skills/git-commits/: SKILL.md
skills/oauth/: SKILL.md
specs/: test-orchestration-plan.md
templates/: brainstorm-api-integration.md  prd-simple-feature-template.md  prd-template.md
tests/: __init__.py  conftest.py  test_integration.py
(+282 files in other folders)
